# nonebot-plugin-tg-stickers-downloads

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/nonebot_plugin_tg_stickers_downloads/: __init__.py  config.py  converter.py  utils.py
tests/: test_core.py
